# bgremove

./: .gitignore  DESIGN.md  README.md  flake.nix  nixos-module.nix  package.nix  pyproject.toml  shell.nix
.github/workflows/: ci.yml
scripts/: bump-version.sh
src/bgremove/: __init__.py  cli.py  core.py
src/bgremove/web/: __init__.py  app.py
src/bgremove/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_core.py  test_web.py
