[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bgremove"
version = "1.0.1"
description = "Remove the background from a picture, keeping only the main subject. CLI + web UI, powered by local ML (rembg)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Michael Mercier", email = "michael.mercier@ryax.tech" }]
keywords = ["background-removal", "rembg", "u2net", "image", "segmentation"]

dependencies = [
    "rembg[cpu]>=2.0.50",
    "pillow>=9.0",
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]
gpu = [
    "rembg[gpu]>=2.0.50",
]

[project.scripts]
bgremove = "bgremove.cli:app"
bgremove-web = "bgremove.web.app:main"

[project.urls]
Homepage = "https://github.com/RustyShare/bgremove"

[tool.hatch.build.targets.wheel]
packages = ["src/bgremove"]

[tool.pytest.ini_options]
testpaths = ["tests"]
